--- a/HiemMauNhanDao/HiemMauNhanDao/HiemMauNhanDao.csproj
+++ b/HiemMauNhanDao/HiemMauNhanDao/HiemMauNhanDao.csproj
@@ -349,6 +349,17 @@
     <Content Include="Assets\client\sass\_review.scss" />
     <Content Include="Assets\client\sass\_single_blog.scss" />
     <Content Include="Assets\client\sass\_variables.scss" />
+    <Content Include="Areas\Admin\Views\DotHiemMau\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\DotHiemMau\EditDHM.cshtml" />
+    <Content Include="Areas\Admin\Views\BenhVien\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\BenhVien\EditBV.cshtml" />
+    <Content Include="Areas\Admin\Views\BenhVien\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\BenhVien\CreateBV.cshtml" />
+    <Content Include="Areas\Admin\Views\DotHiemMau\CreateDHM.cshtml" />
+    <Content Include="Areas\Admin\Views\DKDHM\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\DKDHM\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\LoginAdmin\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
@@ -368,12 +379,17 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
+    <Compile Include="Areas\Admin\Controllers\BenhVienController.cs" />
+    <Compile Include="Areas\Admin\Controllers\DKDHMController.cs" />
+    <Compile Include="Areas\Admin\Controllers\DotHiemMauController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\LoginAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
     <Compile Include="Areas\Client\Controllers\HomeController.cs" />
     <Compile Include="Common\CommonConstant.cs" />
     <Compile Include="Common\Encryptor.cs" />
     <Compile Include="Areas\Client\ClientAreaRegistration.cs" />
+    <Compile Include="Common\HasCredentialAttribute.cs" />
     <Compile Include="Common\UserLogin.cs" />
     <Compile Include="Controllers\admin\HomeController.cs" />
     <Compile Include="Extensions\NotificationExtensions.cs" />
@@ -398,7 +414,6 @@
     <Content Include="Assets\Admin\fonts\Pe-icon-7-stroke.eot" />
     <Content Include="Assets\Admin\fonts\Pe-icon-7-stroke.ttf" />
     <Content Include="Assets\Admin\fonts\Pe-icon-7-stroke.woff" />
-    <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -416,7 +431,9 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Views\Base\" />
     <Folder Include="Areas\Client\Data\" />
+    <Folder Include="Assets\Admin\File\" />
     <Folder Include="Controllers\client\" />
+    <Folder Include="FileUpLoad\" />
     <Folder Include="Views\admin\Home\" />
     <Folder Include="Views\client\" />
   </ItemGroup>
