--- a/HiemMauNhanDao/HiemMauNhanDao/HiemMauNhanDao.csproj
+++ b/HiemMauNhanDao/HiemMauNhanDao/HiemMauNhanDao.csproj
@@ -179,10 +179,15 @@
     <Content Include="Assets\client\img\cource\cource_1.png" />
     <Content Include="Assets\client\img\cource\cource_2.png" />
     <Content Include="Assets\client\img\cource\cource_3.png" />
+    <Content Include="Assets\client\img\doctor\deft.png" />
     <Content Include="Assets\client\img\doctor\doctor_1.png" />
     <Content Include="Assets\client\img\doctor\doctor_2.png" />
     <Content Include="Assets\client\img\doctor\doctor_3.png" />
     <Content Include="Assets\client\img\doctor\doctor_4.png" />
+    <Content Include="Assets\client\img\doctor\huy.jpg" />
+    <Content Include="Assets\client\img\doctor\lap.jpg" />
+    <Content Include="Assets\client\img\doctor\nhan.jpg" />
+    <Content Include="Assets\client\img\doctor\ronaldo.jpg" />
     <Content Include="Assets\client\img\elements\a.jpg" />
     <Content Include="Assets\client\img\elements\a2.jpg" />
     <Content Include="Assets\client\img\elements\d.jpg" />
@@ -215,11 +220,19 @@
     <Content Include="Assets\client\img\icon\color_star.svg" />
     <Content Include="Assets\client\img\icon\feature_1.svg" />
     <Content Include="Assets\client\img\icon\feature_2.svg" />
+    <Content Include="Assets\client\img\icon\giotmau.svg" />
+    <Content Include="Assets\client\img\icon\giotmau2.svg" />
+    <Content Include="Assets\client\img\icon\giotmau3.svg" />
+    <Content Include="Assets\client\img\icon\khambenh1.svg" />
     <Content Include="Assets\client\img\icon\left.svg" />
+    <Content Include="Assets\client\img\icon\like1.svg" />
     <Content Include="Assets\client\img\icon\play.svg" />
     <Content Include="Assets\client\img\icon\quate.svg" />
     <Content Include="Assets\client\img\icon\right.svg" />
     <Content Include="Assets\client\img\icon\star.svg" />
+    <Content Include="Assets\client\img\icon\suckhoe.svg" />
+    <Content Include="Assets\client\img\icon\suckhoe2.svg" />
+    <Content Include="Assets\client\img\icon\traitim1.svg" />
     <Content Include="Assets\client\img\intro_video_bg.png" />
     <Content Include="Assets\client\img\learning_img_bg.png" />
     <Content Include="Assets\client\img\logo.png" />
@@ -358,8 +371,8 @@
     <Content Include="Areas\Admin\Views\DotHiemMau\CreateDHM.cshtml" />
     <Content Include="Areas\Admin\Views\DKDHM\Index.cshtml" />
     <Content Include="Areas\Admin\Views\DKDHM\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\LoginAdmin\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
+    <Content Include="Areas\Client\Views\LoginClient\Index.cshtml" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
@@ -383,9 +396,9 @@
     <Compile Include="Areas\Admin\Controllers\DKDHMController.cs" />
     <Compile Include="Areas\Admin\Controllers\DotHiemMauController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
-    <Compile Include="Areas\Admin\Controllers\LoginAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
     <Compile Include="Areas\Client\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Client\Controllers\LoginClientController.cs" />
     <Compile Include="Common\CommonConstant.cs" />
     <Compile Include="Common\Encryptor.cs" />
     <Compile Include="Areas\Client\ClientAreaRegistration.cs" />
