--- a/HiemMauNhanDao/Models/Models.csproj
+++ b/HiemMauNhanDao/Models/Models.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Services\BenhVienServices.cs" />
     <Compile Include="Services\DKDHMServices.cs" />
     <Compile Include="Services\DotHiemMauServices.cs" />
+    <Compile Include="Services\NhanVienYTeServices.cs" />
     <Compile Include="ViewModel\DotHiemMauView.cs" />
   </ItemGroup>
   <ItemGroup>
