--- a/HiemMauNhanDao/HiemMauNhanDao/HiemMauNhanDao.csproj
+++ b/HiemMauNhanDao/HiemMauNhanDao/HiemMauNhanDao.csproj
@@ -398,6 +398,10 @@
     <Content Include="Areas\Client\Views\NhanVienYTe\ViewNVYT.cshtml" />
     <Content Include="Areas\Client\Views\NhanVienYTe\CreateNVYT.cshtml" />
     <Content Include="Areas\Client\Views\NhanVienYTe\DangBai.cshtml" />
+    <Content Include="Areas\Admin\Views\QuanLyTK\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\QuanLyTK\CreateTK.cshtml" />
+    <Content Include="Areas\Admin\Views\QuanLyTK\EditTK.cshtml" />
+    <Content Include="Areas\Admin\Views\QuanLyTK\Details.cshtml" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
@@ -422,6 +426,7 @@
     <Compile Include="Areas\Admin\Controllers\DotHiemMauController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
+    <Compile Include="Areas\Admin\Controllers\QuanLyTKController.cs" />
     <Compile Include="Areas\Client\Controllers\DangKyTKController.cs" />
     <Compile Include="Areas\Client\Controllers\DotTCHMController.cs" />
     <Compile Include="Areas\Client\Controllers\HomeController.cs" />
