--- a/HiemMauNhanDao/Models/Models.csproj
+++ b/HiemMauNhanDao/Models/Models.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Services\NhanVienYTeServices.cs" />
     <Compile Include="Services\QuanLyTKServices.cs" />
     <Compile Include="ViewModel\DotHiemMauView.cs" />
+    <Compile Include="ViewModel\NhanVienView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
