--- a/HiemMauNhanDao/HiemMauNhanDao/Web.config
+++ b/HiemMauNhanDao/HiemMauNhanDao/Web.config
@@ -22,6 +22,9 @@
 	 <globalization fileEncoding="utf-8" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Account/Login" timeout="2880" />
+	  </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
