--- a/HiemMauNhanDao/Models/Models.csproj
+++ b/HiemMauNhanDao/Models/Models.csproj
@@ -76,6 +76,7 @@
     <Compile Include="EF\PhieuDKHM.cs" />
     <Compile Include="EF\PhieuYCNM.cs" />
     <Compile Include="EF\Quyen.cs" />
+    <Compile Include="EF\sysdiagram.cs" />
     <Compile Include="EF\ThongTinCaNhan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BenhVienServices.cs" />
