--- a/HiemMauNhanDao/HiemMauNhanDao/HiemMauNhanDao.csproj
+++ b/HiemMauNhanDao/HiemMauNhanDao/HiemMauNhanDao.csproj
@@ -472,6 +472,7 @@
     <Content Include="Views\DkDHM\_RightMenu.cshtml" />
     <Content Include="Views\DTCHM\_RightMenu.cshtml" />
     <Content Include="Views\DTCHM\ChiTietDTCHM.cshtml" />
+    <Content Include="Views\NguoiDung\CapnhatTTCN.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
