--- a/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
+++ b/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
@@ -529,6 +529,8 @@
     <Content Include="Views\NhanVienYTe\XemNV.cshtml" />
     <Content Include="Views\DVLK\CapNhatTTDV.cshtml" />
     <Content Include="Views\DVLK\DangBai.cshtml" />
+    <Content Include="Views\Home\HuongDan.cshtml" />
+    <Content Include="Views\Home\LienHe.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
