--- a/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
+++ b/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
@@ -179,6 +179,7 @@
     <Content Include="Assets\Admin\images\logo.png" />
     <Content Include="Assets\Admin\images\logo2.png" />
     <Content Include="Assets\Admin\images\logo3.png" />
+    <Content Include="Assets\Admin\scripts\duyetDVLK.js" />
     <Content Include="Assets\Admin\scripts\main.js" />
     <Content Include="Assets\Admin\scripts\userController.js" />
     <Content Include="Assets\Admin\scripts\userCTL - Copy.js" />
@@ -438,6 +439,7 @@
     <Content Include="Areas\Admin\Views\DonViLK\Index.cshtml" />
     <Content Include="Areas\Admin\Views\DonViLK\Details.cshtml" />
     <Content Include="Areas\Admin\Views\DonViLK\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\DonViLK\Create.cshtml" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
