--- a/HiemMauNhanDao/HiemMauNhanDao/bin/HiemMauNhanDao.dll.config
+++ b/HiemMauNhanDao/HiemMauNhanDao/bin/HiemMauNhanDao.dll.config
@@ -8,9 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-	<connectionStrings>
-		<add name="DbContextHM2" connectionString="data source=knvolap;initial catalog=HienMauNhanDao;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <connectionStrings>
+	  <add name="DbContextHM4" connectionString="data source=knvolap;initial catalog=HienMauNhanDao;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
