--- a/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
+++ b/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
@@ -474,6 +474,7 @@
     <Compile Include="Common\UserLogin.cs" />
     <Compile Include="Controllers\chiTietDHMController.cs" />
     <Compile Include="Controllers\DangKyTKController.cs" />
+    <Compile Include="Controllers\DotToChucHMController.cs" />
     <Compile Include="Controllers\DTCHMController.cs" />
     <Compile Include="Controllers\DkDHMController.cs" />
     <Compile Include="Controllers\DVLKController.cs" />
@@ -512,7 +513,6 @@
     <Content Include="Views\DangKyTK\BenhVien.cshtml" />
     <Content Include="Views\DTCHM\Index.cshtml" />
     <Content Include="Views\DTCHM\DangKyHiemMau.cshtml" />
-    <Content Include="Views\DTCHM\ChiTietDKHM.cshtml" />
     <Content Include="Views\LoginClient\Index.cshtml" />
     <Content Include="Views\LoginClient\Mgs.cshtml" />
     <Content Include="Views\NguoiDung\Index.cshtml" />
@@ -547,6 +547,11 @@
     <Content Include="Views\chiTietDHM\Create.cshtml" />
     <Content Include="Views\chiTietDHM\_RightMenu.cshtml" />
     <Content Include="Views\chiTietDHM\Index.cshtml" />
+    <Content Include="Views\DotToChucHM\Index.cshtml" />
+    <Content Include="Views\DotToChucHM\Details.cshtml" />
+    <Content Include="Views\DotToChucHM\Create.cshtml" />
+    <Content Include="Views\DotToChucHM\Edit.cshtml" />
+    <Content Include="Views\DotToChucHM\_leftMenu2.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
